@@ -8,13 +8,10 @@ import com.casino.slotsystem.repository.SlotRepository;
 import org.springframework.cache.annotation.CacheEvict;
 import org.springframework.cache.annotation.Cacheable;
 
-import org.springframework.data.domain.Sort;
 import org.springframework.messaging.simp.SimpMessagingTemplate;
 import org.springframework.stereotype.Service;
 
 import java.time.LocalDateTime;
-import java.time.OffsetDateTime;
-import java.time.ZoneId;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -37,10 +34,10 @@ public class SlotService {
     // PUBLIC
     @Cacheable("slots")
     public List<SlotResponse> getAllSlots() {
-        return slotRepository.findAll(Sort.by(Sort.Direction.ASC, "id"))
+        return slotRepository.findAll()
                 .stream()
                 .map(this::mapToResponse)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     // ADMIN - edit slot details
@@ -73,14 +70,11 @@ public class SlotService {
         slot.setNumber(number);
         Slot savedSlot = slotRepository.save(slot);
 
-        // 2️⃣ Save history (timezone safe)
+        // 2️⃣ Save history
         SlotHistory history = new SlotHistory();
         history.setSlot(savedSlot);
         history.setNumber(number);
-
-        history.setChangedAt(
-                OffsetDateTime.now(ZoneId.of("Asia/Kolkata"))
-        );
+        history.setChangedAt(LocalDateTime.now());
 
         slotHistoryRepository.save(history);
 
